@@ -14,6 +14,8 @@ DEV
 - *UPDATE*: Fixed a number of accessibility issues, particularly relating to
   the font icons.
 - *UPDATE*: Allow assets in modules (#51)
+- *UPDATE*: Make the filename for new assets optional to simplify creating
+  assets (#40)
 - *BUGFIX*: Fixed the calculation of the time-remaining string (#37)
 - *BUGFIX*: Fixed deep-linking into modules the user is not registered for (#44) 
 
